# Wavebreaker-Hook

./: CMakeLists.txt  Cargo.toml  README.md  Wavebreaker-Hook.sln  build.rs  cmake.toml  vcpkg.json  wrapper.hpp
.github/workflows/: msbuild.yml
Wavebreaker-Hook/: Wavebreaker-Hook.ini  Wavebreaker-Hook.vcxproj  Wavebreaker-Hook.vcxproj.filters  dllmain.cpp  framework.h
Wavebreaker-Hook/SafetyHook/: safetyhook.cpp
include/: D3D9Hook.hpp  DInputHook.hpp  InterFont.hpp  WindowsMessageHook.hpp  config.hpp  nethook.hpp  overlay.hpp  utility.hpp
src/: D3D9Hook.cpp  DInputHook.cpp  Wavebreaker-Client.toml  Wavebreaker-Hook.ini  WindowsMessageHook.cpp  config.hpp  config.rs  dllmain.cpp  hooking.rs  lib.rs  q3d_bindings.rs  state.rs
