[package]
name = "wavebreaker_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
anyhow = "1.*"
retour = { version = "0.3.1", features = ["nightly", "static-detour", "thiscall-abi"] }
tracing = "0.*"
tracing-appender = "0.*"
tracing-subscriber = "0.3.18"
